About Page completed

--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -54,7 +54,7 @@
 
 <!-- ACHIEVEMENTS OF THE CHAPTER -->
 <div class="parallax" style="background-image: url(../../../media/about_images/department.png) !important;
-    height: 500%;
+    height: auto;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -200,7 +200,7 @@
 
 <!-- FACULTY ACHIEVEMENTS -->
 
-<div class="container" style="overflow: hidden !important;">
+<div class="container" style="overflow: hidden !important; padding: 5% 0%;" data-aos="fade-up" data-aos-duration="1500">
     <div style="font-family: 'Dosis', sans-serif; color:#323d47; text-align:center;overflow: hidden !important;">
         <p style="font-size:5rem; font-weight: 700;">FACULTY ACHIEVEMENTS</p>
         <br>
@@ -228,7 +228,7 @@
     </div>
 </div>
 
-<div class="container" style="overflow: hidden !important;">
+<div class="container" style="overflow: hidden !important;" data-aos="fade-up" data-aos-duration="1500">
     <div style="text-align:center;">
         <p style="font-family: 'Dosis', sans-serif; font-size:3.0rem;color:#323d47; ">DR. KEKA OJHA</p>
         <p style="color: #757575; font-size: 2.2rem; ">Professor( Petroleum Engineering )</p>
@@ -247,6 +247,25 @@
             </ul>
             She has been guiding students of petroleum engineering for more than 15 years. Besides being an excellent professor and researcher, she has also served in many administrative positions. She is currently appointed as Associate Dean Academic for Undergraduates
             at IIT (ISM).
+        </p>
+    </div>
+</div>
+
+<div class="container" style="overflow: hidden !important;" data-aos="fade-up " data-aos-duration="1500">
+    <div style="text-align:center;">
+        <p style="font-family: 'Dosis', sans-serif; font-size:3.0rem;color:#323d47; ">Prof. Tarkeshwar Kumar</p>
+        <p style="color: #757575; font-size: 2.2rem; ">Professor( Petroleum Engineering )</p>
+        <br>
+    </div>
+    <div style="text-align: center !important;">
+        <img style="width:200px; height:auto; " src="https://www.iitism.ac.in/assets/employee/66/66.jpg" alt="Prof. T kumar">
+    </div>
+    <div style="font-size: 2rem; padding: 5% 0%; ">
+        <p>
+            <ul>
+                <li>Won the prestigious National Mineral Award in 2008</li>
+                <li>Served as a director of IIT(ISM) Dhanbad, NIFT Ranchi and NIT Durgapur for a period of 10 years</li>
+            </ul>
         </p>
     </div>
 </div>
