--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -130,8 +130,8 @@
         <div class="footer-top">
             <div class="container-fluid">
                 <div class="row" style="overflow: hidden">
-                    <div class="col-md-3 footer-about">
-                        <img src="{% static 'pages/landingpage-bg/chapter-inv-logo.png' %}" style="height: 250px; margin-left: 60px;" alt="logo-footer">
+                    <div class="col-md-2 offset-md-1 footer-about">
+                        <img src="{% static 'pages/landingpage-bg/chapter-inv-logo.png' %}" style="height: 180px;" alt="logo-footer">
                     </div>
                     <div class="col-md-4 offset-md-1 footer-contact">
                         <h3>Contact</h3>
@@ -152,11 +152,6 @@
                                 <p><a class="imp-link" href="https://parent.iitism.ac.in/index.php/parent_portal/portal0">Parents Portal</a></p>
                                 <p><a class="imp-link" href="https://www.fipi.org.in/">FIPI</a></p>
                             </div>
-                            <!--                            <div class="col-md-6">-->
-                            <!--                                <p><a href="#">Gallery</p>-->
-                            <!--                                <p><a href="#">Contact</a></p>-->
-                            <!--                                <p><a href="#">Our Team</a></p>-->
-                            <!--                            </div>-->
                         </div>
                     </div>
                 </div>
