--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -219,6 +219,48 @@
             <hr class="office-bearers-underline d-block mx-auto" style="margin-bottom: 40px;">
         </div>
         <div class="d-block mx-auto">
+
+            <div class="grid-container">
+
+                    <!-- Card -->
+                    <div class="flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                          <img class="round-img" src="{% static 'pages/office-bearers/HOD.jpg' %}" alt="Avatar">
+                        </div>
+                        <div class="flip-card-back flip-border"
+                             style="background-image: url(/static/pages/office-bearers/HOD-blur.jpg);">
+                          <h1 class="card-title" style="color: black;">Rajvardhan Rawat</h1>
+                          <hr class="underline" style="background-color: black;">
+                          <p class="card-content" style="color: black;"></p>
+                          <a href="https://www.linkedin.com/in/rajvardhanrawat/"><i class="fa fa-linkedin"></i></a>
+                          <a href="https://www.facebook.com/mandal.ajay"><i class="fa fa-facebook"></i></a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Card -->
+
+                    <!-- Card -->
+                    <div class="flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                          <img class="round-img" src="{% static 'pages/office-bearers/covener.jpg' %}" alt="Avatar">
+                        </div>
+                        <div class="flip-card-back flip-border"
+                             style="background-image: url(/static/pages/office-bearers/covener-blur.jpg);">
+                          <h1 class="card-title" style="color: white;">Raj Kumar</h1>
+                          <hr class="underline" style="background-color: white;">
+                          <p class="card-content" style="color: white;"></p>
+                          <a href="https://www.facebook.com/neetishmaurya"><i class="fa fa-facebook"></i></a>
+                          <a href=" https://www.linkedin.com/in/neetish-kumar-maurya-22b08a1a/?originalSubdomain=in">
+                              <i class="fa fa-linkedin"></i></a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Card -->
+
+            </div>
+
                 <div class="grid-container-3-col">
 
                     <!-- Card -->
