--- a/SPE-website/events/templates/events/home.html
+++ b/SPE-website/events/templates/events/home.html
@@ -63,7 +63,7 @@
                         <p></p>
                     {% else %}
                     <a href="{{event.google_doc_url}}">
-                        <button type="button" class="btn btn-primary">Register</button>
+                        <button type="button" class="btn btn-primary" style="float: left;">Register</button>
                     </a>
                     {% endif %}
                 </div>
