--- a/SPE-website/pages/static/pages/down-navbar.css
+++ b/SPE-website/pages/static/pages/down-navbar.css
@@ -8,7 +8,11 @@
 .low-nav-item {
     font-size: 19px  !important;
     color: white;
-    padding-right: 20px;
+    padding-right: 25px;
+}
+
+#LowNavLink2 {
+    padding-right: 25px;
 }
 
 #LowNavLink0 a:active, #LowNavLink0 a:hover, #LowNavLink1 a:active, #LowNavLink2 a:active,
