--- a/SPE-website/pages/templates/pages/gallery1.html
+++ b/SPE-website/pages/templates/pages/gallery1.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e1.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e2.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e3.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e4.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/gallery-css/gallery1-e5.css' %}">
 {% endblock content-blog %}
 
 {% block content %}
@@ -166,20 +168,97 @@
     <script src="{% static 'pages/gallery-js/gallery1-e3.js' %}"></script>
    <!-- Event 3-->
 
-    <!-- Static Images -->
-    <div class="col-md-12">
-        <div class="grid-container" style="margin-left: 45px;">
-          <img class="stat-img" src="{% static 'pages/gallery-slideshow/Sclum_WS.png' %}">
-          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-        </div>
+    <!-- Event 4-->
+    <div class="d-block mx-auto" style="width: 1000px;">
+        <h2 class="event-title d-flex justify-content-left">Event 4:</h2>
+        <hr class="event-underline d-flex justify-content-left">
+        <div class="wrapper">
+          <div id="slider-wrap4">
+              <ul id="slider4">
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+                 </li>
+
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-2.jpg' %}">
+                 </li>
+
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-3.jpg' %}">
+                 </li>
+
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-4.jpg' %}">
+                 </li>
+
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-5.jpg' %}">
+                 </li>
+              </ul>
+
+               <!--controls-->
+              <div class="btns" id="next4"><i class="fa fa-arrow-right"></i></div>
+              <div class="btns" id="previous4"><i class="fa fa-arrow-left"></i></div>
+              <div id="counter4"></div>
+
+              <div id="pagination-wrap4">
+                <ul>
+                </ul>
+              </div>
+              <!--controls-->
+
+          </div>
+       </div>
     </div>
-    <!-- Static Images -->
+    <br><br>
+    <script src="{% static 'pages/gallery-js/gallery1-e4.js' %}"></script>
+   <!-- Event 4 -->
+
+    <!-- Event 5 -->
+    <div class="d-block mx-auto" style="width: 1000px;">
+        <h2 class="event-title d-flex justify-content-left">Event 5:</h2>
+        <hr class="event-underline d-flex justify-content-left">
+        <div class="wrapper">
+          <div id="slider-wrap5">
+              <ul id="slider5">
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+                 </li>
+
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-2.jpg' %}">
+                 </li>
+
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-3.jpg' %}">
+                 </li>
+
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-4.jpg' %}">
+                 </li>
+
+                 <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-5.jpg' %}">
+                 </li>
+              </ul>
+
+               <!--controls-->
+              <div class="btns" id="next5"><i class="fa fa-arrow-right"></i></div>
+              <div class="btns" id="previous5"><i class="fa fa-arrow-left"></i></div>
+              <div id="counter5"></div>
+
+              <div id="pagination-wrap5">
+                <ul>
+                </ul>
+              </div>
+              <!--controls-->
+
+          </div>
+       </div>
+    </div>
+    <br><br>
+    <script src="{% static 'pages/gallery-js/gallery1-e5.js' %}"></script>
+   <!-- Event 5 -->
+
 
 {% endblock content %}
