--- a/SPE-website/pages/templates/pages/gazette.html
+++ b/SPE-website/pages/templates/pages/gazette.html
@@ -9,7 +9,7 @@
 
        <br><br><br><br><br>
 
-    <div class="d-block mx-auto col-md-10">
+    <div class="d-block mx-auto col-md-10  media">
         <h1 class="d-flex justify-content-center" id="PageTitle">Gazette</h1>
         <hr class="d-flex justify-content-center" id="UnderlineTitle">
 
