--- a/SPE-website/pages/static/pages/gazettepage.css
+++ b/SPE-website/pages/static/pages/gazettepage.css
@@ -27,3 +27,16 @@
   font-size: 23px;
   text-align: center;
 }
+
+@media screen and (max-width: 770px) {
+    .grid-container {
+  grid-template-columns: auto;
+  justify-content: center;
+}
+}
+
+@media screen and (min-width: 771px) and (max-width: 1050px) {
+    .grid-container {
+  grid-template-columns: auto auto;
+}
+}
