--- a/SPE-website/pages/templates/pages/contact-us.html
+++ b/SPE-website/pages/templates/pages/contact-us.html
@@ -12,7 +12,7 @@
 {% block content %}
 <br><br><br><br><br>
 
-    <div class="container col-md-12" style="overflow: auto;">
+    <div class="container" style="overflow: auto;">
         <h1 class="d-flex justify-content-center" id="PageTitle">Contact Us</h1>
         <hr class="d-flex justify-content-center" id="UnderlineTitle">
 
