--- a/SPE-website/pages/static/pages/contact-us.css
+++ b/SPE-website/pages/static/pages/contact-us.css
@@ -11,7 +11,7 @@
 }
 
 .campus-map {
-    margin: 30px 30px 30px 10%;
+    margin: 30px 30px 30px 0;
     float: left;
 }
 
@@ -59,9 +59,11 @@ p.contact-info {
     }
 }
 
-@media screen and (min-width: 770px) {
+@media screen and (max-width: 770px) {
     .campus-map {
         justify-content: center;
         clear: both;
+        width: 100%;
+        margin-left: 0;
     }
 }
