--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -82,6 +82,12 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-md lower-navbar" style="position: relative; z-index: 1; height: 4em;">
 
+        <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#basicExampleNav">
+                    <span class="menu-icon-bar"></span>
+                    <span class="menu-icon-bar"></span>
+                    <span class="menu-icon-bar"></span>
+                </button>
+
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="basicExampleNav">
 
@@ -103,8 +109,6 @@
 
     </nav>
     <!--/.Navbar-->
-
-    <br>
 
     <!-- Messages -->
     {% if messages %} {% for message in messages %}
