--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -13,8 +13,10 @@
     <div class="container col-md-11">
 
         <!-- Team Image-->
-        <h1 class="d-flex justify-content-center" id="PageTitle">Our Team</h1>
+        <div class="d-block mx-auto">
+            <h1 class="d-flex justify-content-center" id="PageTitle" style="font-size: 6rem;">Our Team:</h1>
                 <hr class="d-flex justify-content-center" id="UnderlineTitle">
+        </div>
 
         <img class="team-vector d-block mx-auto" style="width: 100%; height: auto;" src="{% static 'pages/team-images/team-vector.png' %}">
         <!-- Team Image-->
