--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -224,6 +224,41 @@
             </div>
         </div>
     </div>
+    <!-- Sponsors section -->
+    <div class="container" style="overflow: hidden !important; padding: 0% 2%;" data-aos="fade-up" data-aos-duration="1500">
+        <div style="font-family: 'Dosis', sans-serif; color:#323d47; text-align:center;overflow: hidden !important;">
+            <p style="font-size:4.4rem; font-weight: 700;">COLLABORATIONS</p>
+        </div>
+        <div class="row" id="mainwrapper" style="padding:2% 0%">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div id="box-1" class="box" style="left: 50px;">
+                    <a href="https://ongcindia.com/wps/wcm/connect/en/home/"><img id="image-1" src="https://www.ongcindia.com/wps/wcm/connect/b4ee71c1-8fb3-4a9e-866c-cc96ef9e6edb/logopng.png?MOD=AJPERES&CONVERT_TO=url&CACHEID=ROOTWORKSPACE-b4ee71c1-8fb3-4a9e-866c-cc96ef9e6edb-n1XfB6-" style="object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div id="box-1" class="box" style="left: 50px;">
+                    <a href="https://www.cairnindia.com/Pages/Home.aspx"><img id="image-1" src="https://www.cairnindia.com/SiteAssets/Images/cairn-india-logo.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div id="box-1" class="box" style="left: 50px;">
+                    <a href="https://www.halliburton.com/en-US/default.html"><img id="image-1" src="https://seeklogo.com/images/H/Halliburton-logo-13832260B9-seeklogo.com.png" style="object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="mainwrapper" style="padding:2% 0%;padding-bottom: 10%;">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div id="box-1" class="box" style="left: 50px;">
+                    <a href="http://www.askeor.com/index.html"><img id="image-1" src="../../../media/about_images/askeor.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div id="box-1" class="box" style="left: 50px;">
+                    <a href="https://www.slb.com/"><img id="image-1" src="https://alanweiss.com/wp-content/uploads/2019/07/schlumberger.jpg" style="object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <!--For header text animation-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js "></script>
