SignIn and SignUp page fix

--- a/SPE-website/events/templates/events/events_detail.html
+++ b/SPE-website/events/templates/events/events_detail.html
@@ -50,6 +50,12 @@
             </div>
         </div>
         <!-- Event Detail Body -->
-
+<style>
+    @media screen and (max-width: 770px) {
+        #PostImage {
+            width: 90%;
+        }
+    }
+</style>
 
     {% endblock content %}
