--- a/SPE-website/user/templates/user/signin.html
+++ b/SPE-website/user/templates/user/signin.html
@@ -16,7 +16,7 @@
 
 <body>
 
-        <div class="content-section d-block mx-auto">
+        <div class="content-section d-block mx-auto" id="SignInVert">
             <form method="POST">
                 {% csrf_token %}
                 <fieldset class="form-group">
@@ -34,7 +34,7 @@
 
                 <!-- Sign Up Button -->
                 <div class="form-group">
-                    <button type="submit" id="SignUpBtn" class="btn btn-outline-primary waves-effect"
+                    <button type="submit" id="SignUpBtn" class="btn btn-outline-primary waves-effect d-block mx-auto"
                     style="margin-top: 0px;">Sign In</button>
                 </div>
                 <!-- Sign Up Button -->
