--- a/SPE-website/pages/templates/pages/landing-page.html
+++ b/SPE-website/pages/templates/pages/landing-page.html
@@ -10,7 +10,7 @@
 
         <div class="img-text">
             <h2>SPE IIT ISM STUDENT CHAPTER</h2>
-            <img src="{% static 'pages/landingpage-bg/chapter-logo.png' %}" style="height: 230px;">
+            <img src="{% static 'pages/landingpage-bg/SPE2-gif.gif' %}" style="height: 250px;">
             <div class="text-case">
                 <p class="chapter-text">SPE IIT ISM DHANBAD STUDENT CHAPTER started its journey in 1984. This was the first
                     student chapter at any Indian university and since then the chapter started a new way to connect with the
